loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: Invalid literal number
for (x<- 1to 15){
         ^LoopStairs:1: error: illegal start of simple expression
for (x<- 1to 15){
         ^LoopStairs:8: error: ')' expected but '}' found.
	}
        ^